test/expressions/diten/uintDecimalOverflow.good
uintDecimalOverflow.chpl:1: error: error building numeric literal: integer literal overflow: '18446744073709551616' is too big for type 'uint64'
